<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Gym</string>
    <string name="loading">Loading...</string>
    <string name="connecting">Connecting to device, please wait...</string>
    <string name="scanning">Scanning for BLE devices, please wait...</string>
    <string name="waiting">Waiting for data, please wait...</string>

    <string name="database_update"> Sets updated.</string>
    <string name="disconnected_device">The device has been disconnected or is unavailable</string>
    <string name="reconnecting">The device has been disconnected trying to reconnect</string>
    <string name="ble_unable">Unable connect to BLE device</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth_search">Search</string>
    <string name="search_not_found">No BLE device found</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="action_save">Save</string>
    <string name="name">Name</string>
    <string name="email">Email</string>

    <string name="abs">https://www.freetrainers.com/redbody/eJzbY2hgaIAPGGJhgUC8gbkpAIWrDDw=.png</string>
    <string name="arms">https://www.freetrainers.com/redbody/eJzbY2gAAsgkMcDQIN7A3BQAha8MPA==.png</string>
    <string name="shoulders">https://www.freetrainers.com/redbody/eJzbY2hgYADC2IAhGo0M4g3MTQGFsww8.png</string>
    <string name="back">https://www.freetrainers.com/redbody/eJzbY2gAAwgWgo8uhhCNNzA3BQCFyQw-.png</string>
    <string name="legs">https://www.freetrainers.com/redbody/eJzbY2gAATAamWWAJIYuH29gbgoAhdUMPg==.png</string>
    <string name="buttocks">https://www.freetrainers.com/redbody/eJzbY2iADAwNUPm4QbyBuSkAhZ0MOw==.png</string>
    <string name="hips">https://www.freetrainers.com/redbody/eJzbY2iADRga4BKHgXgDc1MAhZsMPA==.png</string>
    <string name="chest">https://www.freetrainers.com/redbody/eJzbY2hACGBXEW9gbgoAhV0MOg==.png</string>
    <string name="hurt">https://www.freetrainers.com/redbody/eJzbY2iACbCJoYN4A3NTAIVrDDo=.png</string>


    <string-array name="main_muscle_value">
        <item>https://www.freetrainers.com/redbody/eJzbY2hgaIAPGGJhgUC8gbkpAIWrDDw=.png</item>
        <item>https://www.freetrainers.com/redbody/eJzbY2gAAsgkMcDQIN7A3BQAha8MPA==.png</item>
        <item>https://www.freetrainers.com/redbody/eJzbY2hgYADC2IAhGo0M4g3MTQGFsww8.png</item>
        <item>https://www.freetrainers.com/redbody/eJzbY2gAAwgWgo8uhhCNNzA3BQCFyQw-.png</item>
        <item>https://www.freetrainers.com/redbody/eJzbY2gAATAamWWAJIYuH29gbgoAhdUMPg==.png</item>
        <item>https://www.freetrainers.com/redbody/eJzbY2iADAwNUPm4QbyBuSkAhZ0MOw==.png</item>
        <item>https://www.freetrainers.com/redbody/eJzbY2iADRga4BKHgXgDc1MAhZsMPA==.png</item>
        <item>https://www.freetrainers.com/redbody/eJzbY2hACGBXEW9gbgoAhV0MOg==.png</item>
        <item>https://www.freetrainers.com/redbody/eJzbY2iACbCJoYN4A3NTAIVrDDo=.png</item>
        <item>https://www.freetrainers.com/redbody/eJzbY2iACbCJoYN4A3NTAIVrDDo=.png</item>
    </string-array>


    <string-array name="empty_id"></string-array>

    <string name="emulator">Emulator</string>
    <string name="device">Device</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">BLE State:</string>
    <string name="label_artikcloud_deviceid">ARTIK Cloud Device ID:</string>
    <string name="NA">N/A</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">BLE Connect</string>
    <string name="menu_disconnect">BLE Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_logout_cloud">Logout</string>
    <string name="refresh">Refresh</string>


    <string name="title_mode">Run Mode</string>
    <string name="summary_mode">Select Run Mode</string>

    <string name="title_reps">Set Repetitions</string>
    <string name="title_sets">Number Of Sets In An Exercise</string>
    <string name="title_weight">Body Weight</string>
    <string name="title_seconds">Seconds Between Sets</string>


    <string name="key_mode">mode</string>
    <string name="key_reps">reps</string>
    <string name="key_sets">sets</string>
    <string name="key_weight">weight</string>
    <string name="key_seconds">seconds</string>

    <string name="default_mode">niso217</string>
    <string name="default_reps">10</string>
    <string name="default_sets">3</string>
    <string name="default_seconds">60</string>
    <string name="default_weight">70</string>

    <!-- LogInActivity-->
    <string name="permission_denied">Permission Denied</string>
    <string name="re_try">RE-TRY</string>
    <string name="please_fix">Please fix Permissions manually</string>
    <string name="go_settings">Go to settings</string>

    <string name="gps_denied">SmartGym requires GPS</string>
    <string name="gps_fix">Since GPS access has not been granted, SmartGym will not be able to discover Bluetooth when in the background.</string>

    <string name="nfc_denied">SmartGym requires NFC</string>
    <string name="nfc_fix">Since NFC access has not been granted, SmartGym will not be able to discover Bluetooth when in the background.</string>
    <string name="cancel">Cancel</string>

    <string name="request_read_write"> Read Write from external storage permission is necessary, Without this permission the app is unable to work properly</string>
    <string name="request_location"> Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>



    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit</string>
    <string name="review">Review</string>

    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>

    <string name="submit_confirm_message">Are you happy with your choices?</string>
    <string name="submit_confirm_button">OK</string>

    <string name="herp_derpsum">Herp derpsum sherpus derpler berps tee herp ter sherper der derpus terp? Merp ner, dee der perp.
        Sherpus ter berp derpler derperker pee herpler. Le ner derpus terpus, der ter herpy? Ner terp serp herpem berps herpy der ter.</string>

</resources>