<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<ListPreference-->
        <!--android:defaultValue="@string/default_mode"-->
        <!--android:entries="@array/mode"-->
        <!--android:entryValues="@array/mode_value"-->
        <!--android:summary="@string/summary_mode"-->
        <!--android:title="@string/title_mode"-->
        <!--android:key="@string/key_mode" />-->


    <NumberPickerPreference
        android:defaultValue="@string/default_reps"
        android:key="@string/key_reps"
        android:title="@string/title_reps"
        app:maxValue="100"
        app:minValue="1"
        app:valueAsSummary="true" />

    <NumberPickerPreference
        android:defaultValue="@string/default_sets"
        android:key="@string/key_sets"
        android:title="@string/title_sets"
        app:maxValue="100"
        app:minValue="1"
        app:valueAsSummary="true" />

    <NumberPickerPreference
        android:defaultValue="@string/default_weight"
        android:key="@string/key_weight"
        android:title="@string/title_weight"
        app:maxValue="200"
        app:minValue="20"
        app:valueAsSummary="true" />

    <NumberPickerPreference
        android:defaultValue="@string/default_seconds"
        android:key="@string/key_seconds"
        android:title="@string/title_seconds"
        app:maxValue="120"
        app:minValue="10"
        app:valueAsSummary="true" />



</PreferenceScreen>